<resources>
    <string name="app_name">TipTime</string>
    
    <string name="title_tip_time">Tip Time</string>
    <string name="cost_of_service">cost of service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="tip_amazing">amazing (20%)</string>
    <string name="tip_good">good (18%)</string>
    <string name="tip_okey">okey (15%)</string>
    <string name="tips">tip (%)</string>
    <string name="calculate">Calculate</string>
    <string name="round_of_tip">Round up tip?</string>
    <string name="total_amount">Total Amount: Rp. %s</string>
    <string name="tip_amount">Tip Amount: Rp. %s</string>
</resources>