<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_tip_time_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_tip_time"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/cost_of_service_textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cost_of_service_textInputLayout"
        app:srcCompat="@drawable/ic_store" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service_textInputLayout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:hint="@string/cost_of_service"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toBottomOf="@+id/title_tip_time_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_service"
        app:layout_constraintBottom_toBottomOf="@+id/title_service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_service_question"
        android:importantForAccessibility="no"
        android:contentDescription="@string/how_was_the_service" />

    <TextView
        android:id="@+id/title_service_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/how_was_the_service"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_service"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service_textInputLayout" />

    <RadioGroup
        android:id="@+id/tip_options_radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title_service_question"
        app:layout_constraintTop_toBottomOf="@+id/title_service_question">

        <RadioButton
            android:id="@+id/tip_amazing_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tip_amazing" />

        <RadioButton
            android:id="@+id/tip_good_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_good" />

        <RadioButton
            android:id="@+id/tip_okey_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_okey" />
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_roundup"
        app:layout_constraintBottom_toBottomOf="@+id/round_tip_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_tip_switch"
        android:contentDescription="@string/round_of_tip" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_tip_switch"
        style="?attr/materialSwitchStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/round_of_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_round_up_tip"
        app:layout_constraintTop_toBottomOf="@+id/tip_options_radioGroup" />

    <Button
        android:id="@+id/calculate_tip_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/round_tip_switch"
        app:layout_constraintStart_toStartOf="@+id/round_tip_switch"
        app:layout_constraintTop_toBottomOf="@+id/round_tip_switch" />

    <TextView
        android:id="@+id/tip_amount_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="@+id/calculate_tip_button"
        app:layout_constraintStart_toStartOf="@+id/calculate_tip_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_tip_button"
        tools:text="@string/tip_amount" />

    <TextView
        android:id="@+id/total_amount_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="@+id/tip_amount_textView"
        app:layout_constraintStart_toStartOf="@+id/tip_amount_textView"
        app:layout_constraintTop_toBottomOf="@+id/tip_amount_textView"
        tools:text="@string/total_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>